# silica

./: .gitmodules  Cargo.toml  README.md
silica_engine/src/: api.rs  lib.rs  particle.rs  variant.rs  variant_type.rs  world.rs
silica_frontend/: Cargo.toml
silica_frontend/src/: gameworld.rs  input.rs  main.rs  tools.rs
silica_frontend/src/ui/: mod.rs
silica_ui/: Cargo.toml
silica_ui/src/: data.rs  main.rs  manager.rs  utils.rs
web/: index.html
