[package]
name = "silica_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
rayon = "1.8.0"
silica_engine = { path = "../silica-engine/silica_engine" }

